call basic_string destructor to work in clang

failed in clang++ with
src/ast.hpp:60:36: error: expected the class name after '~' to name a destructor
      (&this->name)->std::string::~string();
                                   ^

apparently the former version isn't standard compliant?
See https://bugzilla.mozilla.org/show_bug.cgi?id=623303#c3

But gcc says it is.
See https://gcc.gnu.org/bugzilla/show_bug.cgi?id=49450

However, the union example on http://en.cppreference.com/w/cpp/language/union
uses ~basic_string<char>(), so let's go with that.

Don't know if we actually need the <char>, it does build without it as well.